# CMade

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
_cmake/: Modules.cmake  Tests.cmake
_unity/: unity.h
include/: Sorting.h  Stats.h  Utilities.h  greeter.h
src/: CMakeLists.txt  greeter.c  main.c
src/ModuleA/: CMakeLists.txt  ModuleA.c  ModuleA.h
src/ModuleB/: CMakeLists.txt  ModuleB.c  ModuleB.h
src/_cmake/: ModulesUtils.cmake
src/modules/: CMakeLists.txt  modules.cmake
src/modules/Guards/: .cmake  NullPointerGuard.c  UpperBoundGuard.c
src/modules/Guards/headers/: Guards.h
src/modules/Lists/: .cmake  LinkedList.c
src/modules/Lists/headers/: LinkedList.h
src/modules/Search/: .cmake  BinarySearch.c
src/modules/Search/headers/: Search.h
src/modules/Shapes/: .cmake  Shape.c
src/modules/Sorting/: .cmake  BubbleSort.c  CMakeLists.txt  MergeSort.c  QuickSort.c  SortUtils.c
src/modules/Sorting/include/: SortUtils.h  Sorting.h
src/modules/Stats/: .cmake  CMakeLists.txt  Median.c
src/modules/Utils/: .cmake  CMakeLists.txt  CopyArray_Double.c  NullPointerGuard.c
src/modules/Utils/include/: Utilities.h
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt  tests.cmake
tests/_cmake/: TestsUtils.cmake
tests/_unity/: CMakeLists.txt  unity.c
tests/linked_list/: .cmake  append.c  construction.c  destruction.c  get_data.c  remove.c  set_data.c
tests/other_tests/: .cmake
tests/search/: .cmake  BinarySearch_test_1.c
tests/some-tests/: test.c
tests/some_tests/: CMakeLists.txt
tests/sorting/: .cmake  BubbleSort_test_1.c  BubbleSort_test_2.c  CMakeLists.txt  bubbleSort.c  bubbleSort_1.c  bubbleSort_2.c  runner.ts.4.c  test_2.c
tests/stats/: .cmake  CMakeLists.txt  Median_test_1.c  median.c
tests/suite_1/: CMakeLists.txt  test_1.c  test_2.c
tests/suites/: CMakeLists.txt
tests/suites/sorting/: CMakeLists.txt  bubbleSort_1.c  bubbleSort_2.c
tests/suites/stats/: CMakeLists.txt
tests/suites/utils/: CMakeLists.txt  copyArray.c
tests/utils/: .cmake  copyArray.c
