###############
### /tests ####
###############

# will process a test file and add test to the system
# this function must be called every time a new file is added to the test suite. 
function(add_test test_source_file tested_module_name)
    
endfunction(add_test test_source_file tested_module_name)



# add Unity subdirectory
add_subdirectory(_unity) 

# add suites subdirectory
add_subdirectory(sorting)
